Fixed Navbar + Sweetspot with Misalignment
Gabby Jay!

Yay!

--- a/CSS/template1.css
+++ b/CSS/template1.css
@@ -14,42 +14,41 @@ CSS Template: Rough-ish draft. Feel free to edit CS to make it pretty and gorgeo
 
 body {
     font-family: 'Work Sans', sans-serif;
-    background-color: #393E46;                      /* BODY BACKGROUND COLOR */ 
+    background-color: #25221E;                      /* BODY BACKGROUND COLOR */ 
 }
 
 p {
-    color: #d8d4d4;                                 /* PARAGRAPH FONT COLOR */
+    color: #CCCCCC;                                /* PARAGRAPH FONT COLOR */
 }
 
 .column.left {
     float: left;
-    padding: 20px 10px 25px 25px;                     /* padding goes top, right, bottom, left */
+    padding: 20px 10px 25px 25px;  /* padding goes top, right, bottom, left */
     width: 60%;
 }
 
 .column.right {
     float: right;
     padding: 20px 25px 25px 30px;
-    width: 20%;                                       /* 20% seems to be the sweetspot so our media queries stay proper */ 
+    width: 20%;                   /* 20% seems to be the sweetspot so our media queries stay proper */ 
 }
 
 img {
     max-width: 90%;
     
 }
-
 /* Begin Navbar CSS ------------------------------- Gyuhuck! */ 
 .navbar {
     font-family: 'Roboto Condensed', sans-serif;
     height: 50px;
     width: 100%;
-    background-color: #222831;                      /*  NAVBAR BACKGROUND COLOR */
+    background-color: #3b3b3b;                      /*  NAVBAR BACKGROUND COLOR */
     position: relative;
-    -webkit-box-shadow: 10px 10px 10px #1a1d20;     /* NAVBAR SHADOW - Feel free to disable for testing purposes or edit/ alter */
-    -moz-box-shadow:    5px 5px 5px #1a1d20;
-    box-shadow:         3px 3px 3px #1a1d20;
-    z-index: 999;
-    border-radius: 4px;    
+    -webkit-box-shadow: 10px 10px 10px #9D9D9D;
+    -moz-box-shadow:    5px 5px 5px #9D9D9D;
+    box-shadow:         3px 3px 3px #9D9D9D;
+    z-index:999;
+
   }
   .navbar > .navbar-header {
     display: inline;
@@ -58,8 +57,8 @@ img {
   .navbar > .navbar-header > .navbar-title {
     display: inline-block;
     font-size: 22px;
-    color:  #E59A59;                                  /* "navbar title" id is where it says "Team 3" Change this for that color */
-    text-shadow: 2px 2px #333232;
+    color:  #656565;                    /* "navbar title" id is where it says "Team 3" Change this for that color */
+    text-shadow: 2px 2px #1D1D1D;
     padding: 10px 7px 10px 7px;
   }
 
@@ -71,19 +70,19 @@ img {
 
   .navbar > .navbar-links > a {
     display: inline-block;
-    padding: 13px 12px 13px 12px;
+    padding: 13px 14px 13px 14px;
     text-decoration: none;
-    color: #E59A59;                                 /* NAVBAR LINK COLOR : )   */
-    text-shadow: 2px 2px #333232; 
+    color: #656565;                                 /* NAVBAR LINK COLOR : )   */
+    text-shadow: 2px 2px #1D1D1D; 
   }
 
   .navbar > .navbar-links > a:hover { 
-  -webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
 	box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
-	border-radius: 5px;                                 /* rounded corner of navbar */
+	border-radius: 5px;
   }
 
     .navbar > .navbar-btn,
@@ -93,9 +92,7 @@ img {
 
 
     /* all .navbar media queries relate to the navbar that test for pixel count and change from horizontal to sandwich navbar */ 
-  
-
-  @media (max-width:650px) {
+@media (max-width:650px) {
     .navbar > .navbar-btn {
       display: inline-block;
       position: absolute;
@@ -111,7 +108,7 @@ img {
       padding: 13px;
     }
     .navbar > .navbar-btn > label:hover,.navbar  #navbar-check:checked ~ .navbar-btn > label {
-      background-color: rgba(0, 0, 0, 0.3);
+      background-color: #000000;
     }
 
     /* edit this to mess with the literal shape of the hamburger icon */
@@ -119,33 +116,30 @@ img {
       display: block;
       width: 25px;
       height: 8px;
-      border-top: 2px solid #E59A59;                /* SANDWICH ICON COLOR */
-      border-radius: 2.5px;                           /* sandwich icon flair :  )    Adds some curve to the ends of the sandwich to make it less.... boring */
+      border-top: 2px solid #eee;
     }
     .navbar > .navbar-links {
       position: absolute;
       display: block;
-      width: 50%;                                     /* Horizontal size of the navbar dropdown list */
-      background-color:#222831;                     /* NAVBAR DROP-DOWN BACKGROUND COLOR- SHOULD MATCH NAVBAR BACKGROUND COLOR */
-      height: 80px;
-      transition: all 0.5s ease-in;
+      width: 90%;
+      background-color: #1E1E1E;
+      height: 90px;
+      transition: all 0.8s ease-in;
       overflow-y: hidden;
       top: 50px;
       left: 0px;
-      border-radius: 3px;
     }
     .navbar > .navbar-links > a {
       display: block;
-      width: 80%;      
+      width: 100%;
     }
     .navbar > #navbar-check:not(:checked) ~ .navbar-links {
       height: 0px;
     }
     .navbar > #navbar-check:checked ~ .navbar-links {
-      /* height: calc(50vh - 35px);    */  
-      height: auto;                  /* change (##vh - ##px) to alter the size of the dropdown list. From max rez - fixed amount. */
+      height: calc(100vh - 50px);
       overflow-y: auto;
-      }
+    }
 
 
     /* these are the body column media queries to resize things in response to different resolutions / devices. Should be about right? */
@@ -185,12 +179,12 @@ img {
     }
     @media screen and (max-width: 480px) {
         .column.left {
-            width:40%;
+            width:45%;
             float:left;
             margin:0px 1%;
         }
         .column.right {
-            width:20%;
+            width:30%;
             float:right;
             margin:0px 1%;
         }
@@ -201,7 +195,4 @@ img {
         }
     }
 
-    }
 
-
-    /* Christopher Hoyt, November 2020 */
